--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -45,62 +45,37 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 </li>
 </ul>
 
-<p>
-	<strong>Employment</strong>
-</p>
-<p>
-01/2021 - 	Assistant Professor
-</p>
-<p>
+<a name="employment"><h2>Employment</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
 
-                Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Universidad Católica de la Santísima Concepción, Concepción, Chile
-</p>
-<p>
-12/2018 - 01/2021	Associate Specialist / TESS Scientist<br>	University of California Santa Barbra, CA, USA<br>	Las Cumbres Observatory, CA, USA
-</p>
-<p>
-10/2013 - 11/2018	Support Astronomer<br>	Pontificia Universidad Católica de Chile, Santiago, Chile
-</p>
-<p>
-10/2011 - 09/2014	3-yr. FONDECYT fellowship<br>	Pontificia Universidad Católica de Chile, Santiago, Chile
-</p>
-<p>
-10/2009 - 12/2011	PUC Postdoctoral fellow<br>	Pontificia Universidad Católica de Chile, Santiago, Chile
-</p>
-<p>
-11/2007 - 02/2008	EARA Early Stage Training Secondment Stay<br>	Institut d’Astrophysique de Paris, Paris, France
-</p>
-<p>
-10/2005 - 09/2009	Ph. D. student<br>	Instituto de Astrofísica de Canarias, Canary Island, Spain
-</p>
-<ul>
-
-<li>Title: „Estudio de planetas extrasolares por el método de tránsitos“
-</li>
+<li><span><b>Assistant Professor</b>, Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Universidad Católica de la Santísima Concepción, Concepción, Chile (01/2021 to present)</span></li>
+<li><span><b>Associate Specialist / TESS Scientist</b>, University of California Santa Barbra, Las Cumbres Observatory, CA, USA (12/2018 to 01/2021)</span></li>
+<li><span><b>Support Astronomer</b>, Pontificia Universidad Católica de Chile, Santiago, Chile & Max Planck Institute for Astronomy, Heidelberg, Germany (10/2013 to 11/2018)</span></li>
+<li><span><b>3-yr. FONDECYT fellowship</b>, Pontificia Universidad Católica de Chile, Santiago, Chile (10/2011 to 09/2014)</span></li>
+<li><span><b>PUC Postdoctoral fellow</b>, Pontificia Universidad Católica de Chile, Santiago, Chile (10/2009 to 12/2011)</span></li>
+<li><span><b>EARA Early Stage Training Secondment Stay</b>, Institut d’Astrophysique de Paris, Paris, France (11/2007 to 02/2008)</span></li>
+<li><span><b>Ph. D. student</b>, Instituto de Astrofísica de Canarias, Canary Island, Spain (10/2005 to 09/2009)</span></li>
 </ul>
 
+
+<a name="scholarships"><h2>Scholarships</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
+<li><span><b>EARA Marie Curie – (EST) doctoral fellowship</b>, European Association for Research in Astronomy (2005 to 2008)</span></li>
+<li><span><b>Fulbright Grant</b>, Fulbright Commission, Germany (2004 to 2005)</span></li>
+<li><span><b>Provost Scholarship</b>, New Jersey Institute of Technology, USA (2004 to 2005)</span></li>
+
+<a name="publication_summary"><h2>Publication summary</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
 <p>
-	<strong>Scholarships</strong>
-</p>
-<p>
-2005 - 2008	EARA Marie Curie – (EST) doctoral fellowship<br>	European Association for Research in Astronomy<br>	Instituto de Astrofísica de Canarias, Spain
-</p>
-<p>
-2004 - 2005	Fulbright Grant<br>	Fulbright Commission, Germany
-</p>
-<p>
-2004 - 2005	Provost Scholarship<br>	New Jersey Institute of Technology, USA
+(As of 2021, May 5 from NASA ADS)<br>    
+• Number of refereed publications: 132<br>    
+• Number of total citations: 5790<br>    
+• h-index: 35<br>    
+• tori-index: 3.1
 </p>
 
-
-<p>
-	<strong>Publication summary</strong>
-</p>
-<p>
-(As of 2020, May 4 from NASA ADS)<br>    • Number of refereed publications: 132<br>    • Number of total citations: 5790<br>    • h-index: 35<br>    • tori-index: 3.1
-</p>
-
-
+<a name="publications"><h2>Selected refereed publications</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
 <p>
 	<strong>Selected refereed publications</strong>
 </p>
@@ -120,10 +95,9 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 <em>Towards reliable uncertainties in IR interferometry: the bootstrap for correlated statistical and systematic errors</em><br>Lachaume R., <strong>Rabus M.</strong>, Jordán A., et al.<br>Monthly Notices of the Royal Astronomical Society 484, 2656 (2019), <strong>Citations: 4</strong>
 </p>
 
+<a name="activities"><h2>Activities</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
 
-<p>
-	<strong>Activities</strong>
-</p>
 <ul>
 
 <li>Peer-reviews for „Astronomy & Astrophysics” und „Monthly Notices of the Royal Astronomical Society”
@@ -148,10 +122,8 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 </li>
 </ul>
 
-
-<p>
-	<strong>Languages and Computer skills</strong>
-</p>
+<a name="skills"><h2>Languages and Computer skills</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
 <p>
 Languages:	German (native), English (fluent), Spanisch (fluent)
 </p>
