--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -48,13 +48,13 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 <a name="employment"><h2>Employment</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
 
-<li><span><b>Assistant Professor</b>, Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Universidad Católica de la Santísima Concepción, Concepción, Chile (01/2021 to present)</span></li>
-<li><span><b>Associate Specialist / TESS Scientist</b>, University of California Santa Barbra, Las Cumbres Observatory, CA, USA (12/2018 to 01/2021)</span></li>
-<li><span><b>Support Astronomer</b>, Pontificia Universidad Católica de Chile, Santiago, Chile & Max Planck Institute for Astronomy, Heidelberg, Germany (10/2013 to 11/2018)</span></li>
-<li><span><b>3-yr. FONDECYT fellowship</b>, Pontificia Universidad Católica de Chile, Santiago, Chile (10/2011 to 09/2014)</span></li>
-<li><span><b>PUC Postdoctoral fellow</b>, Pontificia Universidad Católica de Chile, Santiago, Chile (10/2009 to 12/2011)</span></li>
-<li><span><b>EARA Early Stage Training Secondment Stay</b>, Institut d’Astrophysique de Paris, Paris, France (11/2007 to 02/2008)</span></li>
-<li><span><b>Ph. D. student</b>, Instituto de Astrofísica de Canarias, Canary Island, Spain (10/2005 to 09/2009)</span></li>
+<li><span><b>Assistant Professor</b>, Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Universidad Católica de la Santísima Concepción, Concepción, Chile (2021 to present)</span></li>
+<li><span><b>Associate Specialist / TESS Scientist</b>, University of California Santa Barbra, Las Cumbres Observatory, CA, USA (2018 to 2021)</span></li>
+<li><span><b>Support Astronomer</b>, Pontificia Universidad Católica de Chile, Santiago, Chile & Max Planck Institute for Astronomy, Heidelberg, Germany (2013 to 2018)</span></li>
+<li><span><b>3-yr. FONDECYT fellowship</b>, Pontificia Universidad Católica de Chile, Santiago, Chile (2011 to 2014)</span></li>
+<li><span><b>PUC Postdoctoral fellow</b>, Pontificia Universidad Católica de Chile, Santiago, Chile (2009 to 2011)</span></li>
+<li><span><b>EARA Early Stage Training Secondment Stay</b>, Institut d’Astrophysique de Paris, Paris, France (2007 to 2008)</span></li>
+<li><span><b>Ph. D. student</b>, Instituto de Astrofísica de Canarias, Canary Island, Spain (2005 to 2009)</span></li>
 </ul>
 
 
@@ -73,6 +73,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 • h-index: 35<br>    
 • tori-index: 3.1
 </p>
+</ul>
 
 <a name="publications"><h2>Selected refereed publications</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
@@ -94,11 +95,10 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 <p>
 <em>Towards reliable uncertainties in IR interferometry: the bootstrap for correlated statistical and systematic errors</em><br>Lachaume R., <strong>Rabus M.</strong>, Jordán A., et al.<br>Monthly Notices of the Royal Astronomical Society 484, 2656 (2019), <strong>Citations: 4</strong>
 </p>
+</ul>
 
 <a name="activities"><h2>Activities</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
-
-<ul>
 
 <li>Peer-reviews for „Astronomy & Astrophysics” und „Monthly Notices of the Royal Astronomical Society”
 
@@ -145,6 +145,4 @@ Computer skills:	Python (including Jupyter notebooks)		- excellent
 <p>
 	Apache Airflow					- basic
 </p>
-<p>
-	
-</p>
+</ul>
