--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -20,7 +20,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 
 <a name="education"><h2 class="western">Education:</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
- 	<li><span><b>Doctor en Física/Astrofísica (Ph. D. Physics/Astrophysics), </b></span><span><b>, Universidad de La Laguna</b></span>
+ 	<li><span><b>Doctor en Física/Astrofísica (Ph. D. Physics/Astrophysics), </b></span><span><b> Universidad de La Laguna</b></span>
 <ul>
  	<li><strong><span><b>Date:</b></span></strong><span> Oct. 2009</span></li>
   <li><b><span>Doctoral Thesis:</b></span><span> Estudio de planetas extrasolares por el método de tránsitos</span></li>
@@ -38,7 +38,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 </li>
 </ul>
 <ul style="line-height: 1.5; margin: 10px 0;">
- 	<li><span><b>Diplom-Wirtschaftsingenieur (FH),</b> <b>University of Applied Science Kempten</b></span>
+ 	<li><span><b>Diplom-Wirtschaftsingenieur,</b> <b>University of Kempten</b></span>
 <ul>
  	<li><strong><span><b>Date: </b></span></strong><span>Feb. 2003</span></li>
 </ul>
