--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -19,6 +19,15 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 
 
 <a name="education"><h2 class="western">Education:</h2></a>
+
+<ul style="line-height: 1.5; margin: 10px 0;">
+ 	<li><span><b>Diplomado en Innovación en la enseñanza de la Ciencia, Tecnología, Ingeniería, Humanidades y Matemáticas, </b></span><span><b> LASPAU Harvard University</b></span>
+<ul>
+ 	<li><strong><span><b>Date:</b></span></strong><span> Oct. 2021</span></li>
+</ul>
+</li>
+</ul>
+
 <ul style="line-height: 1.5; margin: 10px 0;">
  	<li><span><b>Doctor en Física/Astrofísica (Ph. D. Physics/Astrophysics), </b></span><span><b> Universidad de La Laguna</b></span>
 <ul>
@@ -28,6 +37,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 </ul>
 </li>
 </ul>
+
 <ul style="line-height: 1.5; margin: 10px 0;">
  	<li><span><b>M. Sc, Applied Physics</b>, <b>New Jersey Institute of Technology & Rutgers University</b></span>
 <ul>
@@ -37,6 +47,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 </ul>
 </li>
 </ul>
+
 <ul style="line-height: 1.5; margin: 10px 0;">
  	<li><span><b>Diplom-Wirtschaftsingenieur,</b> <b>University of Kempten</b></span>
 <ul>
@@ -63,39 +74,52 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 <li><span><b>EARA Marie Curie – (EST) doctoral fellowship</b>, European Association for Research in Astronomy (2005 to 2008)</span></li>
 <li><span><b>Fulbright Grant</b>, Fulbright Commission, Germany (2004 to 2005)</span></li>
 <li><span><b>Provost Scholarship</b>, New Jersey Institute of Technology, USA (2004 to 2005)</span></li>
+</ul>
 
 <a name="publication_summary"><h2>Publication summary</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
 <p>
-(As of 2021, May 5 from NASA ADS)<br>    
-• Number of refereed publications: 132<br>    
-• Number of total citations: 5790<br>    
-• h-index: 35<br>    
-• tori-index: 3.1
+(As of 2022, Nov. 12 from NASA ADS)<br>    
+• Number of refereed publications: 146<br>    
+• Number of total citations: 7427 (with only ~7% self-citations)<br>    
+• h-index: 39<br>    
+• tori-index: 3.4
 </p>
 </ul>
 
 <a name="publications"><h2>Selected refereed publications</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
 <p>
-<em>A discontinuity in the T<sub>eff</sub>-radius relation of M-dwarfs</em><br><strong>Rabus M.</strong>, Lachaume R., Jordán A., et al.<br>Monthly Notices of the Royal Astronomical Society 484, 2674 (2019), <strong>Citations: 19</strong>
+<em>A discontinuity in the T<sub>eff</sub>-radius relation of M-dwarfs</em><br><strong>Rabus M.</strong>, Lachaume R., Jordán A., et al.<br>Monthly Notices of the Royal Astronomical Society 484, 2674 (2019), <strong>Citations: 33</strong>
 </p>
 <p>
-<em>HATS-11b AND HATS-12b: Two Transiting Hot Jupiters Orbiting Subsolar Metallicity Stars Selected for the K2 Campaign 7</em><br><strong>Rabus M.</strong>, Jordán A., Hartman J. D., et al.<br>The Astronomical Journal 152(4):88-101 (2016), <strong>Citations: 17</strong>
+<em>HATS-11b AND HATS-12b: Two Transiting Hot Jupiters Orbiting Subsolar Metallicity Stars Selected for the K2 Campaign 7</em><br><strong>Rabus M.</strong>, Jordán A., Hartman J. D., et al.<br>The Astronomical Journal 152(4):88-101 (2016), <strong>Citations: 19</strong>
 </p>
 <p>
-<em>A cool starspot or a second transiting planet in the TrES-1 system?</em><br><strong>Rabus M.</strong>, Alonso R., Belmonte J. A., et al.<br>Astronomy and Astrophysics 494(1) (2009), <strong>Citations: 72</strong>
+<em>A cool starspot or a second transiting planet in the TrES-1 system?</em><br><strong>Rabus M.</strong>, Alonso R., Belmonte J. A., et al.<br>Astronomy and Astrophysics 494(1) (2009), <strong>Citations: 73</strong>
 </p>
 <p>
-<em>Transit timing analysis of the exoplanets TrES-1 and TrES-2</em><br><strong>Rabus M.</strong>, Deeg H. J., Alonso R., Belmonte J. A., Almenara J. M.<br>Astronomy and Astrophysics 508(2) (2009), <strong>Citations: 31</strong>
+<em>Transit timing analysis of the exoplanets TrES-1 and TrES-2</em><br><strong>Rabus M.</strong>, Deeg H. J., Alonso R., Belmonte J. A., Almenara J. M.<br>Astronomy and Astrophysics 508(2) (2009), <strong>Citations: 37</strong>
 </p>
 <p>
-<em>Towards reliable uncertainties in IR interferometry: the bootstrap for correlated statistical and systematic errors</em><br>Lachaume R., <strong>Rabus M.</strong>, Jordán A., et al.<br>Monthly Notices of the Royal Astronomical Society 484, 2656 (2019), <strong>Citations: 4</strong>
+<em>Towards reliable uncertainties in IR interferometry: the bootstrap for correlated statistical and systematic errors</em><br>Lachaume R., <strong>Rabus M.</strong>, Jordán A., et al.<br>Monthly Notices of the Royal Astronomical Society 484, 2656 (2019), <strong>Citations: 7</strong>
 </p>
 </ul>
 
+<a name="grants"><h2>Grants</h2></a>
+<ul style="line-height: 1.5; margin: 10px 0;">
+
+<li> Kickstarter grant KSP-6 "Assessing Crowded Field Photometry measured with the Rubin Pipeline", Co-PI (USD 15,000 assigned from a total of USD 30,000)
+<li> Kickstarter grant KSP-7 "DECam DDF Undergrad Research", Co-PI (USD 8,830 assigned from a total of USD 29,820)
+<li> Fondecyt Postdoctoral 2012 CLP 20,800,000
+
+</ul>
+
+
 <a name="activities"><h2>Activities</h2></a>
 <ul style="line-height: 1.5; margin: 10px 0;">
+
+<li>Member of the Rubin Observatory User Committee
 
 <li>Peer-reviews for „Astronomy & Astrophysics” und „Monthly Notices of the Royal Astronomical Society”
 
@@ -105,7 +129,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 
 <li>LSST commissioning liaison for the TVSSC
 
-<li>Organization and speaker for the public outreach event „Astronomy on Tap Santa Barbara“ and speaker at AoT Deleware
+<li>Organizing Committee Astronomy on Tap (AoT) Santa Barbara
 
 <li>Speaker at LSST PCW 2019, Tucson
 
@@ -125,21 +149,30 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 Languages:	German (native), English (fluent), Spanisch (fluent)
 </p>
 <p>
-Computer skills:	Python (including Jupyter notebooks)		- excellent
+Computer skills:
+<p>
+Python (including Jupyter notebooks)&emsp;- excellent
+</p>
 </p>
 <p>
-	Github workflow 				- advanced
+	Rubin pipeline&emsp;- advanced
 </p>
 <p>
-	Docker container				- intermediate
+	Github workflow&emsp;- advanced
 </p>
 <p>
-	SQL / NoSQL					- intermediate<br>	C++						- intermediate
+	Docker container&emsp;- intermediate
 </p>
 <p>
-	Apache Spark					- basic
+	SQL / NoSQL&emsp;- intermediate
 </p>
 <p>
-	Apache Airflow					- basic
+	C++&emsp;- intermediate
+</p>
+<p>
+	Apache Spark&emsp;- basic
+</p>
+<p>
+	Apache Airflow&emsp;- basic
 </p>
 </ul>
