--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -127,7 +127,7 @@ Departamento de Matemática y Física Aplicadas, Facultad de Ingeniería, Univer
 
 <li>TVS roadmap section editor and chapter author
 
-<li>LSST commissioning liaison for the TVSSC
+<li>Rubin Observatory commissioning liaison for the TVSSC
 
 <li>Organizing Committee Astronomy on Tap (AoT) Santa Barbara
 
